# pelo

./: Cargo.toml  README.md
assets/deck/: 光来的奇迹！.ydk  法老电话诈骗.ydk  电话诈骗.ydk
src/: app.rs  deck.rs  error.rs  log_record.rs  main.rs  main_menu.rs  side_menu.rs  system.rs  title.rs
