[package]
name = "pelo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"                                               #错误处理
crossbeam-channel = "0.5.11"                                    #数据信道
crossterm = { version = "0.27.0", features = ["event-stream"] } #终端控制
ratatui = "0.25.0"                                              #终端绘制
reqwest = { version = "0.11.23", features = ["json"] }          #HTTP请求
regex = "1.10.2"                                                #正则表达式
image = "0.24.7"                                                #图像处理
